mobile fixes: updated menu and corrected social media buttons overlapping with other items in footer

--- a/css/style.css
+++ b/css/style.css
@@ -743,6 +743,7 @@ ul.conta_top li a {
 ul.social_icon {
      float: left;
      padding-top: 30px;
+     padding-bottom: 30px;
 }
 
 ul.social_icon li {
